[package]
name = "bloboon"
version = "0.1.0"
edition = "2024"

[dependencies]
monke = { git = "https://git.monke.ca/monke/util", branch = "master" }
bytes = "1.11.0"
lz4_flex = "0.12.0"
tracing = "0.1.43"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rkyv = { version = "0.8.12", features = ["big_endian"] }
io-uring = "0.7.11"
gdt-cpus = "25.12.0"
blake3 = "1.8.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
libc = "0.2.178"

[dev-dependencies]
fastrand = "2.3.0"
tempfile = "3.23.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
